# symbolic-rs

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/expr/: mod.rs
src/latex/: mod.rs
src/parser/: mod.rs
src/poly/: mod.rs
src/rules/: mod.rs
tests/: derivative_comprehensive.rs  diff_test.rs  diff_test2.rs  easy_features_test.rs  trace_inf.rs
