[package]
name = "symbolic-rs"
version = "0.1.0"
edition = "2021"
description = "A high-performance symbolic algebra system using E-Graphs and sparse polynomials"

[dependencies]
# 1. Core Representation: E-Graphs (等价图，用于极速规则重写与恒等式化简)
egg = "0.9"

# 2. Storage & Memory Optimization: Arena / Hash Consing (内存池，消除碎片，共享不可变节点)
id-arena = "2.2"

# 3. Parsing: (语法解析引擎，完美支持Pratt Parsing处理数学优先级)
winnow = "0.6"

# 4. Numerics: (有理数和精确浮点计算)
# Note: Using num suite initially over rug to avoid GMP native dependency issues during fast prototyping.
num = "0.4"
num-traits = "0.2"
num-bigint = "0.4"
num-rational = "0.4"

# 5. Concurrency & Parallelism: (为多项式展开、大规模重写提供多核加速)
rayon = "1.10"
dashmap = "6.0"

# 6. Serialization: (将AST或图序列化，方便前后端交互)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ordered-float = "5.3.0"

# Optional JIT layer (LLVM 绑定, 建议后续实现时按需开启)
# inkwell = { version = "0.3.0", features = ["llvm15-0"] }
